--- a/compose-dev.yaml
+++ b/compose-dev.yaml
@@ -1,6 +1,8 @@
 services:
   app:
-
+    entrypoint:
+    - sleep
+    - infinity
     image: docker/dev-environments-default:stable-1
     init: true
     ports:
