--- a/compose-dev.yaml
+++ b/compose-dev.yaml
@@ -1,14 +1,7 @@
 services:
   app:
-    entrypoint:
-    - sleep
-    - infinity
-    image: docker/dev-environments-default:stable-1
-    init: true
+    build: .
     ports:
     - "8080:8080"
-    volumes:
-    - type: bind
-      source: /var/run/docker.sock
-      target: /var/run/docker.sock
+
 
