--- a/compose-dev.yaml
+++ b/compose-dev.yaml
@@ -10,6 +10,7 @@ services:
       source: /var/run/docker.sock
       target: /var/run/docker.sock
   mongo:
+    image: mongo
     ports: 
     - "27017:27017"
     volumes:
